# TrieSpline

./: CMakeLists.txt  test.cpp  test.sh  triespline.hpp
